classDiagram
    direction TB

    class Project {
        +String name
        +String description
        +MutableSet~AccountId~ accountIds
        +MutableSet~IssueId~ issueIds
        +MutableSet~MergeRequestId~ mergeRequestIds
        +MutableSet~MilestoneId~ milestoneIds
    }

    class Repository {
        +String localPath
        +ProjectId projectId
    }

    class Issue {
        +String gid
        +Int platformIid
        +String title
        +String description
        +LocalDateTime createdAt
        +LocalDateTime closedAt
        +LocalDateTime updatedAt
        +String state
        +String webUrl
        +List~Mention~ mentions
        +ProjectId project
        +AccountId authorId
        +Set~AccountId~ accountIds
        +Set~CommitId~ commitIds
        +Set~MilestoneId~ milestoneIds
        +Set~NoteId~ noteIds
        +Set~DeveloperId~ developerIds
    }

    class MergeRequest {
        +ProjectId project
        +Int platformIid
        +String title
        +String description
        +String createdAt
        +String closedAt
        +String updatedAt
        +String state
        +String webUrl
        +List~Mention~ mentions
        +MutableSet~MilestoneId~ milestoneIds
        +MutableSet~NoteId~ noteIds
        +MutableSet~AccountId~ accountIds
    }

    class Note {
        +String body
        +String createdAt
        +String updatedAt
        +Boolean system
        +Boolean resolvable
        +Boolean confidential
        +Boolean internal
        +Boolean imported
        +String importedFrom
        +MutableSet~IssueId~ issueIds
        +MutableSet~MergeRequestId~ mergeRequestIds
        +MutableSet~AccountId~ accountIds
    }

    class User {
        <<deprecated>>
        +String name
        +String email
        +RepositoryId repositoryId
        +MutableSet~IssueId~ issueIds
        +MutableSet~FileId~ fileIds
    }

    class Mention {
        +String commit
        +LocalDateTime createdAt
        +Boolean closes
    }

    Project "1" -- "0..1" Repository : has (via ID)
    Project "1" -- "*" Issue : contains (via ID)
    Project "1" -- "*" MergeRequest : contains (via ID)
    Project "1" -- "*" Account : contains (via ID)
    Issue "1" -- "1" Account : authored by (via ID)
    Issue "1" -- "*" Note : has (via ID)
    Issue "1" -- "*" Mention : has
    Issue "*" -- "*" Account : involves (via ID)
    MergeRequest "1" -- "*" Note : has (via ID)
    MergeRequest "1" -- "*" Mention : has
    Repository "1" -- "*" User : legacy (via ID)
